--- a/html/lapweeks.html
+++ b/html/lapweeks.html
@@ -75,7 +75,8 @@
 			kunnen neerzetten. Ik heb veel geholpen met het bedenken van het concept. programmeren, testen en designen. Ik denk ook wel dat ik een goede
 			toevoeging was voor de groep. Ik heb ook veel geprobeert om de groep te laten samen werken en alles te laten bespreken, omdat ik toch merkte
 			in die twee weken dat iedereen zijn eigen weg op ging. Maar ik heb geprobeert om iedereen bij elkaar te houden. Samen hebben we goed samen gewerkt
-			en ik ben trots wat we hebben neergezet in twee weken. <br ><br >
+			en ik ben trots wat we hebben neergezet in twee weken. <br >
+			De aftermovie van het <a href="https://youtu.be/MzX2TsKpb3k">project!</a><br ><br >
 			</p>
 			
 		</div>
