--- a/html/topic_one.html
+++ b/html/topic_one.html
@@ -36,7 +36,7 @@
 				De medewerkers en studenten hebben de app op de telefoon, waardoor het makkelijk is om te gebruiken. 
 				Ze kunnen via de app zien hoe de route gaat en de activiteiten zoals traplopen gaan doen. Ze worden gestimuleerd omdat er een 
 				competitie achter zit. Mensen worden gestimuleerd om dingen te doen als ze iets kunnen winnen. De app geeft ook meldingen waardoor 
-				mensen de activiteiten niet kunnen missen. Ze zijn eventjes lekker aan het bewegen in het gebouw.
+				mensen de activiteiten niet kunnen missen. Ze zijn eventjes lekker aan het bewegen in het gebouw.<br >
 				<img src="../pictures/nummereen.jpg">
 				<br ><br >
 
@@ -47,19 +47,14 @@
 				wie er gewonnen heeft.<br >
 			</p>
 			<h3>Research</h3>
-			<p><b>1.	Look for two new examples of exertion games/interfaces (that have not been mentioned in class)</b><br >
-				BubblePopper en waterfall climber<br ><br >
+			<p>
+				BubblePopper is een exertion game. De speler moet zoveel mogelijk balletjes op het scherm kapot prikken. Zie hier de 
+				<a href="https://www.youtube.com/watch?v=Z5vTbYZOzOo">link</a>. 
+				Het is een multiplayer  en  competitieve spel. Het kan met twee spelers gespeeld worden en ze kunnen tegen elkaar spelen. De gene met de meeste kapotte ballen heeft gewonnen.  De interface ziet er als volgt uit: Het is een muur waarop licht schijnt. Op het scherm worden verschillende soorten ballen weergeven en die moeten kapot worden gemaakt, door erop te drukken. De interface is bij dit spel het belangrijkste onderdeel van het spel. De techniek ziet er als volgt uit: Op de muur wordt licht op geprojecteerd van achteren. De lampen zitten achter de muur die verschillende soorten licht maken en bewegen. Zo kunnen er balletjes op het scherm verschijnen. <br ><br >
 
-				<b>2.	Indicate the play modus (single/multiplayer, competitive, cooperative)</b><br >
-				Multiplayer en competitive<br ><br >
-
-				<b>3.	Describe the purpose of the interface.</b><br >
-				Het is een muur waarop licht op schijnt. Op de muur kan er op geklommen worden om het spel te spelen. Het is een interactieve game, 
-				mensen moeten zelf bewegen of iets doen om het spel te spelen.<br ><br >
-
-				<b>4.	Describe how the installation works technically.</b><br >
-				Beide spellen zit het spel op een muur. De muur projecteert ligt waardoor mensen het spel kunnen spelen. 
-				In de muur zitten lichten die verschillende kleuren hebben. In de muur zit een computer in die de lichten besturen. <br ><br >
+				Waterfall climber is een exertion game. Zie de <a href="http://exertiongameslab.org/projects/waterfall-climber">link</a>. 
+				Het spel is een single play modus game, waarbij de speler omhoog moet klimmen. Onder de speler stijgt er water naar boven. De gene die klimt moet boven het water blijven door omhoog te klimmen. Het is een competitieve spel omdat de speler tegen het water strijd. Ze moet boven het water blijven om te winnen. De interface ziet er als volgt uit: het is een klimmuur met water erop geprojecteerd. Het nut van de interface is dat de speler omhoog kan klimmen door de grijp elementen op de muur. Het water onder aan de muur geeft een beeld waar de speler boven moet blijven. Het is de basis van het spel en daarmee het belangrijkste deel om het spel te spelen. De techniek is een projector dat op de muur schijnt. De projector staat voor de muur en weergeeft water op de muur. Het is animatie dat omhoog beweegt.
+			<br ><br >
 			</p>
 			<h3>Reflect</h3>
 			<p>
